--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,13 +20,14 @@ jobs:
         echo github.event.action: ${{ github.event.action }}
         echo github.event_name: ${{ github.event_name }}
     
-    - name: configure
-      run: ./configure
-      
-    - name: make
-      run: make
-      
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: Install g++
+      run: 
+        sudo apt update
+        sudo apt install g++
+        g++ --version
+        
+    - name: Run Lab05
+      run: 
+        cd ./Lab/KTLT_Lab05
+        g++ lab05.cpp
+        ./a.out
