--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,13 +21,13 @@ jobs:
         echo github.event_name: ${{ github.event_name }}
     
     - name: Install g++
-      run: 
+      run: |
         sudo apt update
         sudo apt install g++
         g++ --version
         
     - name: Run Lab05
-      run: 
+      run: |
         cd ./Lab/KTLT_Lab05
         g++ lab05.cpp
         ./a.out
